--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,22 @@
 # Django Backend Configuration
 DEBUG=True
 SECRET_KEY=your-secret-key-here
-
+DATABASE_URL=postgresql://username:password@localhost:5432/pawpaldb
 
 # API Keys
 GEMINI_API_KEY=your-gemini-api-key-here
+OPENAI_API_KEY=your-openai-api-key-here
 
-
-# Database Settings (if not using DATABASE_URL)
+# Database Settings (fallback)
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=pawpaldb
 DB_USER=postgres
-DB_PASSWORD=your-db-password
+DB_PASSWORD=your-password
 DB_HOST=localhost
 DB_PORT=5432
 
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# Allowed Hosts
+ALLOWED_HOSTS=localhost,127.0.0.1
