Random forest symptom classifier
Pet Context Integration

AI diagnosis Reports

Image Analysis

EffocoemtMet-B0 and MobileNetV3 for image classifier

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Allowed Hosts
 ALLOWED_HOSTS=localhost,127.0.0.1
+
+#KAGGLE
+KAGGLE_USERNAME=your-kaggle-username
+KAGGLE_KEY=your-kaggle-api-key
+ML_DATA_DIR=ml/data
+ML_MODELS_DIR=ml/models
