--- a/Requirements.txt
+++ b/Requirements.txt
@@ -11,15 +11,15 @@ Django==5.2.4
 django-cors-headers==4.7.0
 django-extensions==4.1
 djangorestframework==3.16.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-grpcio==1.74.0
-grpcio-status==1.71.2
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+grpcio==1.62.2
+grpcio-status==1.62.2
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.30.0
@@ -28,13 +28,13 @@ idna==3.10
 jiter==0.10.0
 openai==1.97.0
 Pillow==11.3.0
-proto-plus==1.26.1
-protobuf==5.29.5
+proto-plus==1.24.0
+protobuf==4.25.4
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1-modules==0.4.2
 pydantic==2.11.7
-pydantic_core==2.33.2
+pydantic-core==2.33.2
 pyparsing==3.2.3
 python-decouple==3.8
 requests==2.32.5
@@ -43,7 +43,16 @@ sniffio==1.3.1
 sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing-extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+scikit-learn==1.5.2
+pandas==2.2.3
+numpy==1.26.4
+joblib==1.4.2
+kaggle==1.6.17
+opencv-python==4.8.1.78
+tensorflow==2.15.0
+tensorflow-hub==0.15.0
+tensorflow-addons==0.21.0
