--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,58 +1,95 @@
+absl-py==2.3.1
 annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.9.1
+astunparse==1.6.3
+bleach==6.2.0
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.3
 colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
 distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.4
 django-cors-headers==4.7.0
 django-extensions==4.1
 djangorestframework==3.16.0
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.1
+flatbuffers==25.9.23
+fonttools==4.60.0
+gast==0.6.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
 google-api-python-client==2.181.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-googleapis-common-protos==1.63.2
-grpcio==1.62.2
-grpcio-status==1.62.2
+google-auth-oauthlib==1.2.2
+google-generativeai==0.8.5
+google-pasta==0.2.0
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+grpcio-status==1.62.3
 h11==0.16.0
+h5py==3.14.0
 httpcore==1.0.9
 httplib2==0.30.0
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
+joblib==1.5.2
+kaggle==1.7.4.5
+keras==2.15.0
+kiwisolver==1.4.9
+libclang==18.1.1
+Markdown==3.9
+MarkupSafe==3.0.3
+matplotlib==3.10.6
+ml-dtypes==0.2.0
+numpy==1.26.4
+oauthlib==3.3.1
 openai==1.97.0
-Pillow==11.3.0
-proto-plus==1.24.0
-protobuf==4.25.4
+opt_einsum==3.4.0
+packaging==25.0
+pandas==2.3.2
+Pillow==10.1.0
+proto-plus==1.26.1
+protobuf==4.25.8
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pyasn1-modules==0.4.2
+pyasn1_modules==0.4.2
 pydantic==2.11.7
-pydantic-core==2.33.2
+pydantic_core==2.33.2
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.1.1
+python-slugify==8.0.4
+pytz==2025.2
 requests==2.32.5
+requests-oauthlib==2.0.0
 rsa==4.9.1
+scikit-learn==1.7.2
+scipy==1.16.2
+seaborn==0.13.2
+six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
+tensorboard==2.15.2
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+text-unidecode==1.3
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing-extensions==4.14.1
+typing_extensions==4.14.1
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
-scikit-learn==1.5.2
-pandas==2.2.3
-numpy==1.26.4
-joblib==1.4.2
-kaggle==1.6.17
-opencv-python==4.8.1.78
-tensorflow==2.15.0
-tensorflow-hub==0.15.0
-tensorflow-addons==0.21.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.14.2
