--- a/Requirements.txt
+++ b/Requirements.txt
@@ -39,22 +39,21 @@ idna==3.10
 jiter==0.10.0
 joblib==1.5.2
 kaggle==1.7.4.5
-keras==2.15.0
 kiwisolver==1.4.9
 libclang==18.1.1
 Markdown==3.9
 MarkupSafe==3.0.3
 matplotlib==3.10.6
-ml-dtypes==0.2.0
-numpy==1.26.4
+ml-dtypes==0.5.3
+numpy==2.3.4
 oauthlib==3.3.1
 openai==1.97.0
 opt_einsum==3.4.0
 packaging==25.0
 pandas==2.3.2
-Pillow==10.1.0
+Pillow==10.4.0
 proto-plus==1.26.1
-protobuf==4.25.8
+protobuf
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -75,12 +74,9 @@ seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
-tensorboard==2.15.2
+tensorboard
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow==2.20.0
 termcolor==3.1.0
 text-unidecode==1.3
 threadpoolctl==3.6.0
