--- a/Requirements.txt
+++ b/Requirements.txt
@@ -55,6 +55,7 @@ Pillow==10.4.0
 proto-plus==1.26.1
 protobuf
 psycopg2-binary==2.9.10
+PyJWT==2.8.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
