--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "axios": "^1.11.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.552.0",
+    "ph-locations": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "recharts": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
