--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "framer-motion": "^12.23.24"
+    "exceljs": "^4.4.0",
+    "framer-motion": "^12.23.24",
+    "html2pdf.js": "^0.12.1",
+    "xlsx": "^0.18.5"
   }
 }
